--- a/sample/styles.css
+++ b/sample/styles.css
@@ -32,7 +32,7 @@ body {
     margin-top: 50px;
 }
 
-.page-host {
+/*.page-host {
     position: absolute;
     left: 0;
     right: 0;
@@ -40,7 +40,7 @@ body {
     bottom: 0;
     overflow-x: hidden;
     overflow-y: auto;
-}
+}*/
 
 section {
     margin: 0 20px;
